dev/test_programs/INVALID/group13/missing_type.go
package main

func main() {
	println("hello")
}

func test(a, b) {
	return
}